# gumTree

./: .glitch-assets  .replit  LICENSE.txt  README.md  install.sh  main.py  narflinger.py  package.json  pyproject.toml  replit.nix  requirements-stealth.txt  requirements.txt  start.sh  watch.json
.github/workflows/: publish_glitch.yml  requirements.txt
static/: browserconfig.xml
templates/: index.html
trees/: t0001.json
