[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
replit = "^3.2.4"
Flask = "^2.1.3"
Flask-Compress = "^1.13"
numpy = "^1.24.1"
aioflask = "^0.4.0"
quart = "^0.18.3"
quart-compress = "^0.2.1"
uvloop = "^0.17.0"
hikari = "^2.0.0.dev126"
werkzeug = "~2.2"
cchardet = "^2.1.7"
requests = "^2.32.3"
attrs = "^23.2.0"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
debugpy = "^1.6.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"